Revision history for Perl extension Shlomif::NavMenu.

    - Refactoring: Made HTML::Widgets::NavMenu::Object a sub-class of 
    Class::Accessor to remove many "use base" calls to it.
    - In progress - converting a flat %args hash (splatted into the @_)
    into a single $args hash-ref.

1.0201    Fri Mar 28 17:46:59 IDT 2008
    - Fixed a case where a non-capturing expand in a node inside a
    capturing expand caused the upper node to be non-capturing too.

1.0200    Sun Mar 23 21:53:37 IST 2008
    - Removed trailing whitespace from "# TEST" lines - this can confuse
    early versions of Test-Count
    - Fixed a "# TEST" instead of a "# TESTbr" line that confused Test-Count.
    - Added the no_leading_dot option with a test.

1.0100    Fri Feb  8 19:19:09 IST 2008
    - Fixed a bug in HTML::Widgets::NavMenu::Url:
    relative URL from a non-dir to a dir. It accidently had an
    extraneous "../".
    - Fixed the _get_leading_path_of_coords function in HTML::Widgets::NavMenu
    to properly generate the topmost item of the breadcrumbs trail, which
    should be in coords = [0] and not coord = []. The latter is meaningless
    and ignored. This caused a subtle bug in combining the breadcrumbs
    trails of my homesite.
        - it became apparent when the URL of the [0] item was not empty.
    - Added the 'capt' key to the 'expand' => keys for "capturing" regex.

1.0001    Mon Sep 11 14:38:39 IDT 2006
    - Added "use strict" and "use warnings" to all modules.
    - Added a Test::Pod based test.
    - Added a Test::Pod::Coverage test, and added POD to all modules.
        - Some internal methods were prefixed with an underscore.
    - Added the examples directory.

1.0000    Sun Nov 06 16:01:00 IST 2005
    - Made sure that the breadcrumbs trail in expanded sections will
    display the components of the expanded sections.
    - Fixed the POD.
    - Added the link to the article to the POD.